--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,9 @@
 {% block content %}
 <link rel="stylesheet" href="/static/style.css">
 
-<!-- Floating Admin Login Button -->
+<!-- Floating Admin Login Button --> 
 <a href="/admin" class="admin-login-button">Admin Login</a>
+ <!-- <a href="/admin" class="logout-button">Admin Login</a> -->
 
 <div class="container">
     <h1>Welcome back! <br> Buddy!</h1>
