--- a/templates/user_register.html
+++ b/templates/user_register.html
@@ -9,8 +9,9 @@
     <hr>
 
     <form method="post" action="/register">
-        <label>User ID *</label>
-        <input name="id" type="number" required placeholder="Enter user ID" />
+        <!-- <label>User ID *</label> -->
+        <label>Employee ID *</label>
+        <input name="id" type="number" required placeholder="Enter Employee ID" />
 
         <label>Name *</label>
         <input name="name" type="text" required placeholder="Full name" />
