--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -14,7 +14,7 @@
 <div class="sections">
     <!-- Leave Section (Clickable) -->
     <div class="section">
-        <a href="/admin/employee-leaves" class="oval-button clickable-leave">Leave</a>
+        <a href="/admin/leave-dashboard" class="oval-button clickable-leave">Leave</a>
     </div>
 
     <!-- Deployment Section -->
