--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>LeaveMate</title>
+     <link rel="stylesheet" href="/static/style.css?v=3"> 
 </head>
 <body>
     {% block content %}{% endblock %}
