--- a/templates/user_register.html
+++ b/templates/user_register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<link rel="stylesheet" href="/static/style.css">
+<!-- <link rel="stylesheet" href="/static/style.css"> -->
 
 <div class="container">
     <h1>Create a Free Account</h1>
