--- a/templates/home.html
+++ b/templates/home.html
@@ -12,10 +12,10 @@
         <p>Please enter your credentials to sign in</p>
 
         <form method="post" action="/Userlogin">
-    <label for="username">Username *</label>
+    <!-- <label for="username">Username *</label> -->
     <input type="text" name="username" id="username" required placeholder="Enter your username" />
 
-    <label for="password">Password *</label>
+    <!-- <label for="password">Password *</label> -->
     <div class="password-wrapper">
         <input type="password" name="password" id="password" required placeholder="Enter your password" />
         <span class="eye-icon" onclick="togglePassword('password', this)"><i class="fas fa-eye"></i></span>
